# BoSP

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  PROJECT_AGENT_GUIDE.md  README.md  ROADMAP.md  progress-dsp.md  walkthrough-reverb.md
.github/: copilot-instructions.md
build_tests/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BoSP_Tests.slnx  CMakeCache.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  test_filter.vcxproj  test_filter.vcxproj.filters  test_reverb.vcxproj  test_reverb.vcxproj.filters  test_waveshaper.vcxproj  test_waveshaper.vcxproj.filters
plugins/Chorus/: CMakeLists.txt
plugins/Chorus/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/Compressor/: CMakeLists.txt
plugins/Compressor/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/Delay/: CMakeLists.txt
plugins/Delay/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/Distortion/: CMakeLists.txt
plugins/Distortion/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/Filter/: CMakeLists.txt
plugins/Filter/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/Reverb/: CMakeLists.txt
plugins/Reverb/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
shared/DSP/: BiquadFilter.h  DCBlocker.h  Delay.h  DelayLine.h  DryWet.h  EnvelopeFollower.h  Gain.cpp  Gain.h  LFO.h  Meter.h  NoiseGenerator.h  OnePoleFilters.h  Oversampler.h  ParameterSmoother.h  Reverb.h  SoftClipper.h  StereoTools.h  Tone.h  WaveShaper.h
tests/: CMakeLists.txt  tests_Filter.cpp  tests_Reverb.cpp  tests_WaveShaper.cpp
